Added support for plugin extensions